Grid y Flex avance

--- a/index.html
+++ b/index.html
@@ -6,11 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="grid-container">
-   <header class="header">Header</header>
-   <nav class="navbar">navbar</nav>
-   <main class="main">main</main>
+   <header class="header">
+    <div class="div-usuario">
+        <i class="fa-regular fa-bell"></i>
+        <i class="fa-regular fa-envelope"></i>
+        <img src="/imagenes/usuario.jpg" class="usuario-img">
+        <h2>usuario</h2>
+    </div>
+    
+   </header>
+   <nav class="navbar">
+    <section class="navbar-item">
+        <i class="fa-solid fa-house"></i> 
+        <h2>Dashboard</h2>
+    </section>
+    <section class="navbar-item">
+        <i class="fa-solid fa-envelope fa-envelope-nav"></i>
+        <h2>Email</h2>
+    </section>
+    <section class="navbar-item">
+        <i class="fa-solid fa-share-from-square"></i>
+        <h2>Dashboard</h2>
+    </section>
+   </nav>
+   <main class="main">
+    <div class="main-content">
+        <h1>Hola</h1>
+    </div>
+    
+</main>
    <footer class="footer">footer</footer>
 </body>
 </html>
